--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Fearchar.org</title>
+    <title>Fearchar</title>
   </head>
   <body>
     <div id="root"></div>
