--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <link
       rel="stylesheet"
-      href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css"
     />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
