--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="icon" href="./images/favicon-32x32.png" type="image/png">
     <script src="https://kit.fontawesome.com/14fa0cec83.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/png" href="images/favicon-32x32.png">
     <title>Fearchar</title>
   </head>
   <body>
